# sliples

./: .env.example  .gitignore  Makefile  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_users_table.py  003_add_schedules_table.py  004_add_test_sessions_table.py  005_add_projects_table.py  006_add_project_id_to_entities.py  007_add_pages_table.py  008_schedules_multi_environment.py  009_add_missing_columns.py  010_add_timezone_to_schedules.py  ed0c23bfddfb_add_locale_timezone_to_environment.py
backend/app/: __init__.py  config.py  database.py  main.py  seed_data.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  security.py
backend/app/models/: __init__.py  api_key.py  custom_step.py  environment.py  page.py  project.py  scenario.py  schedule.py  test_run.py  test_session.py  user.py
backend/app/services/: __init__.py  email_service.py  filesystem_sync.py  git_sync_service.py  google_auth.py  interactive_executor.py  report_generator.py  s3_service.py  test_executor.py  websocket_pubsub.py
backend/app/workers/: celery_app.py  scheduled.py  tasks.py
runner/: Dockerfile  conftest.py  pyproject.toml
runner/scenarios/sliples/: sliples-acceptance.feature  test_acceptance.py  test_auth.feature  test_auth.py  test_environments.feature  test_environments.py  test_execution.feature  test_execution.py  test_frontend_auth.feature  test_frontend_auth.py  test_frontend_customsteps.feature  test_frontend_customsteps.py  test_frontend_dashboard.feature  test_frontend_dashboard.py  test_frontend_environments.feature  test_frontend_environments.py  test_frontend_scenarioeditor.feature  test_frontend_scenarioeditor.py  test_frontend_settings.feature  test_frontend_settings.py  test_frontend_testruns.feature  test_frontend_testruns.py  test_frontend_users.feature  test_frontend_users.py  test_google_sso.feature  test_google_sso.py  test_reports.feature  (+11 more)
runner/steps/: __init__.py  api.py  assertions.py  common.py  forms.py  navigation.py
(+140 files in other folders)
