[project]
name = "sliples-runner"
version = "0.1.0"
description = "Sliples Test Runner - Playwright-based test execution"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.42.0",
    "pytest>=7.4.4",
    "pytest-bdd>=7.0.1",
    "pytest-playwright>=0.4.4",
    "pytest-html>=4.1.1",
    "boto3>=1.34.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.14",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["scenarios"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
bdd_features_base_dir = "scenarios"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"
